@@ -1,7 +1,7 @@
 #define RUBY_VERSION "1.8.8"
-#define RUBY_RELEASE_DATE "2010-06-15"
+#define RUBY_RELEASE_DATE "2010-06-22"
 #define RUBY_VERSION_CODE 188
-#define RUBY_RELEASE_CODE 20100615
+#define RUBY_RELEASE_CODE 20100622
 #define RUBY_PATCHLEVEL -1
 
 #define RUBY_VERSION_MAJOR 1
@@ -9,7 +9,7 @@
 #define RUBY_VERSION_TEENY 8
 #define RUBY_RELEASE_YEAR 2010
 #define RUBY_RELEASE_MONTH 6
-#define RUBY_RELEASE_DAY 15
+#define RUBY_RELEASE_DAY 22
 
 #define NO_STRING_LITERAL_CONCATENATION 1
 #ifdef RUBY_EXTERN
